// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test.component.ts - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
@Component({
       selector: 'app-test',
  template: \`<ul>   <li>test</li>
  </ul>
  \`,
  styles: [   \`
  
 :host {
   color: red;
 } 
 div { background: blue
 }
\`

]
})
class     TestComponent {}

=====================================output=====================================
@Component({
  selector: "app-test",
  template: \`<ul>
    <li>test</li>
  </ul> \`,
  styles: [
    \`
      :host {
        color: red;
      }
      div {
        background: blue;
      }
    \`
  ]
})
class TestComponent {}

================================================================================
`;

exports[`test.component.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
@Component({
       selector: 'app-test',
  template: \`<ul>   <li>test</li>
  </ul>
  \`,
  styles: [   \`
  
 :host {
   color: red;
 } 
 div { background: blue
 }
\`

]
})
class     TestComponent {}

=====================================output=====================================
@Component({
  selector: "app-test",
  template: \`<ul>
    <li>test</li>
  </ul> \`,
  styles: [
    \`
      :host {
        color: red;
      }
      div {
        background: blue;
      }
    \`,
  ],
})
class TestComponent {}

================================================================================
`;
